# wp-connector-api

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
docs/: README.md
src/: lib.rs
src/config/: adapter.rs
src/errors/: sink.rs  source.rs
src/runtime/: cnn.rs
src/runtime/source/: event.rs  types.rs
tests/: demo_connector.rs
