[package]
name = "wp-connector-api"
version = "0.7.0"
edition = "2024"

[lib]
name = "wp_connector_api"

[dependencies]
once_cell = "1.21"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
toml =  "0.9"
anyhow = "1.0"
wp-parse-api = "0.7"
wp-model-core = "0.7"
async-broadcast = "0.7"
thiserror = "2.0"
orion-error= "0.5"
derive_more = "2.1"
smol_str = { version = "0.3", features = ["serde"] }
serde_derive = "1"
serde_json = "1"
smallvec = { version = "1.13", features = ["serde"] }

[features]
test_helpers = []

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
