[package]
name = "wp-connector-api"
version = "0.10.1" #@gxl:set(version)
edition = "2024"
description = "Connector runtime traits, config helpers, and errors for WarpParse sinks and sources"
authors = ["WarpParse Dev Team"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/wp-labs/wp-connector-api"
homepage = "https://github.com/wp-labs/wp-connector-api"
documentation = "https://docs.rs/wp-connector-api"
keywords = ["warpparse", "connector", "ingestion", "runtime", "sink"]
categories = ["asynchronous", "network-programming", "api-bindings"]

[lib]
name = "wp_connector_api"

[dependencies]

async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
toml =  "1.0"

wp-model-core = "0.8"
async-broadcast = "0.7"
orion-error = { version = "0.8", features = ["serde"] }
derive_more = { version = "2.1", features = ["from"] }
smol_str = { version = "0.3", features = ["serde"] }
serde_derive = "1"
serde_json = "1"
smallvec = { version = "1.13", features = ["serde"] }

[features]
test_helpers = []

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
